--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="nav_favorites">Favorites</string>
     <string name="nav_settings">Settings</string>
     <string name="hint_search">Search Pokemons</string>
+    <string name="no_pokemons_found">No Pokemons found.</string>
 </resources>
