--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,22 @@
     <string name="nav_settings">Settings</string>
     <string name="hint_search">Search Pokemons</string>
     <string name="no_pokemons_found">No Pokemons found.</string>
+    <string name="placeholder_text">Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis.</string>
+    <string name="more_info">MORE INFO</string>
+    <string name="clear_my_favorites_list">CLEAR MY FAVORITES LIST</string>
+    <string name="about">About</string>
+    <string name="language">Language</string>
+    <string name="cancel">Cancel</string>
+    <string name="clear">Clear</string>
+    <string name="clear_favorites_list">Clear favorites list?</string>
+    <string name="favorites_is_clear">Favorites list is clear.</string>
+    <string name="sofascore_android_academy">SofaScore Android Academy</string>
+    <string name="class_2021">Class 2021</string>
+    <string name="app_name_assist">App Name</string>
+    <string name="api_credit">API Credit</string>
+    <string name="pokeapi">PokeAPI</string>
+    <string name="developer">Developer</string>
+    <string name="dev_name">Rafael Boban</string>
+    <string name="an_error_occured">An Error Occured.</string>
+    <string name="retry">Retry</string>
 </resources>
