--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="nav_favorites">Favorites</string>
     <string name="nav_settings">Settings</string>
     <string name="hint_search">Search Pokemons</string>
-    <string name="no_pokemons_found">No Pokemons found.</string>
+    <string name="no_pokemons_found">No Pokemon found.</string>
     <string name="placeholder_text">Vestibulum rutrum quam vitae fringilla tincidunt. Suspendisse nec tortor urna. Ut laoreet sodales nisi, quis iaculis nulla iaculis.</string>
     <string name="more_info">MORE INFO</string>
     <string name="clear_my_favorites_list">CLEAR MY FAVORITES LIST</string>
@@ -21,6 +21,7 @@
     <string name="pokeapi">PokeAPI</string>
     <string name="developer">Developer</string>
     <string name="dev_name">Rafael Boban</string>
-    <string name="an_error_occured">An Error Occured.</string>
+    <string name="an_error_occured">An Error Occurred.</string>
     <string name="retry">Retry</string>
+    <string name="favorites_are_empty">Favorites are empty.</string>
 </resources>
