--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,8 @@
     <string name="language">Language</string>
     <string name="cancel">Cancel</string>
     <string name="clear">Clear</string>
-    <string name="clear_favorites_list">Clear Favorites List?</string>
-    <string name="favorites_is_clear">Favorites List is Clear.</string>
+    <string name="clear_favorites_list">Clear favorites list?</string>
+    <string name="favorites_is_clear">Favorites list is clear.</string>
     <string name="sofascore_android_academy">SofaScore Android Academy</string>
     <string name="class_2021">Class 2021</string>
     <string name="app_name_assist">App Name</string>
@@ -23,7 +23,7 @@
     <string name="dev_name">Rafael Boban</string>
     <string name="something_went_wrong">Oops, Something Went Wrong.</string>
     <string name="retry">Retry</string>
-    <string name="favorites_are_empty">Favorites are empty.</string>
+    <string name="favorites_are_empty">Favorites list is empty.</string>
     <string name="check_connection">Check Your Connection and Try Again.</string>
     <string-array name="languages">
         <item>English</item>
