--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="retry">Retry</string>
     <string name="favorites_are_empty">Favorites list is empty.</string>
     <string name="check_connection">Check Your Connection and Try Again.</string>
+    <string name="generation_separator_text">Generation %1$s</string>
     <string-array name="languages">
         <item>English</item>
         <item>German</item>
