--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="favorites_are_empty">Favorites list is empty.</string>
     <string name="check_connection">Check Your Connection and Try Again.</string>
     <string name="generation_separator_text">Generation %1$s</string>
+    <string name="height_format">%1$s\'%2$s\" (%3$s m)</string>
+    <string name="weight_format">%1$s lbs. (%2$s kg)</string>
     <string-array name="languages">
         <item>English</item>
         <item>German</item>
