--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,12 @@
     <string name="type">Type</string>
     <string name="height">HEIGHT</string>
     <string name="weight">WEIGHT</string>
+    <string name="evolution">Evolution</string>
+    <string name="unevolved">UNEVOLVED</string>
+    <string name="first_evolution">1ST EVOLUTION</string>
+    <string name="second_evolution">2ND EVOLUTION</string>
+    <string name="level_format">Lv %1$s</string>
+
     <string-array name="languages">
         <item>English</item>
         <item>German</item>
