--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="first_evolution">1ST EVOLUTION</string>
     <string name="second_evolution">2ND EVOLUTION</string>
     <string name="level_format">Lv %1$s</string>
+    <string name="type_title">%1$s Type</string>
 
     <string-array name="languages">
         <item>English</item>
@@ -59,5 +60,7 @@
     <string name="title_activity_type">TypeActivity</string>
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
