--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,10 @@
     <string name="second_evolution">2ND EVOLUTION</string>
     <string name="level_format">Lv %1$s</string>
     <string name="type_title">%1$s Type</string>
+    <string name="double_multiplier">2X</string>
+    <string name="half_multiplier">1/2X</string>
+    <string name="zero_multiplier">0X</string>
+
 
     <string-array name="languages">
         <item>English</item>
@@ -58,9 +62,11 @@
         <item>French</item>
     </string-array>
     <string name="title_activity_type">TypeActivity</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="offensive">Offensive</string>
+    <string name="power">Power</string>
+    <string name="types">Types</string>
+    <string name="defensive">Defensive</string>
+    <string name="none">None</string>
 
 </resources>
